syntax = "proto3";

package grpc.paymentservice;

message CreatePayment {
  string firstName = 1;
  string lastName = 2;
  string cardNumber = 3;
  string cvv = 4;
  string expireDate = 5;
  string amount = 6;
  string orderId = 7;
  string bankId = 8;
  int64 userId = 9;
  string paymentMethod = 10;
}

message PaymentDto {
  string response = 1;
  string message = 2;
  string orderId = 3;
}

service PaymentService {
  rpc Pay(CreatePayment) returns (PaymentDto);
}